<resources>
    <string name="app_name">ChristosMarkakis</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="hobbies_btn_label">Hobbies</string>
    <string name="contact_btn_label">Contact</string>
    <string name="previous_btn_label">Previous</string>

    <string name="title_biography">Biography</string>
    <string name="title_hobbies">Hobbies</string>
    <string name="title_contact">Contact</string>

    <string name="short_bio">
        Christos Markakis is a student at PACE University currently studying to get his Master\'s in Computer Science.
        He completed a Bachelor\'s of Science in CS as well back in May 2022 at the State University of New York at Albany and
        currently works as a software developer. Some of Christos\'s favorite areas in Computer Science are Operating Systems,
        Game/Game Engine Development, GPU Parallel Programming and Compilers.
    </string>

    <string name="hobbies_bio">
        Some of my favorite hobbies include coding, game dev, weightlifting, hiking and music.
    </string>

    <string name="contact_info">
        I can be reached at christos2email@fake.com
    </string>

    <string name="email">
        christos2email@fake.com
    </string>

    <string name="going_to_contact">Going to contact…</string>
</resources>